deploy: 59d01a31257a9b775ac07bfc1d697c0cef757fe4

--- a/index-all.html
+++ b/index-all.html
@@ -1731,6 +1731,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">How to weight traffic between variations.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/GBFeaturesRepository.html#shutdown()" class="member-name-link">shutdown()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" title="class in growthbook.sdk.java">GBFeaturesRepository</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/Operator.html#SIZE" class="member-name-link">SIZE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
 <dd>
 <div class="block">$size</div>
