deploy: b973b9d8df4c2774b7c6f9e5dc534041da8b221a

--- a/deprecated-list.html
+++ b/deprecated-list.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="script-dir/jquery-3.6.1.min.js"></script>
+<script type="text/javascript" src="script-dir/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="deprecated-list-page">
@@ -53,6 +53,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li><a href="#class">Classes</a></li>
 <li><a href="#method">Methods</a></li>
+<li><a href="#constructor">Constructors</a></li>
 </ul>
 </div>
 <ul class="block-list">
@@ -87,6 +88,23 @@ loadScripts(document, 'script');</script>
 <div class="col-last even-row-color"></div>
 <div class="col-summary-item-name odd-row-color"><a href="growthbook/sdk/java/FeatureRule.html#setNamespace(growthbook.sdk.java.Namespace)">growthbook.sdk.java.FeatureRule.setNamespace<wbr>(Namespace)</a></div>
 <div class="col-last odd-row-color"></div>
+<div class="col-summary-item-name even-row-color"><a href="growthbook/sdk/java/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html#encryptionKey(java.lang.String)">growthbook.sdk.java.GBFeaturesRepository.GBFeaturesRepositoryBuilder.encryptionKey<wbr>(String)</a></div>
+<div class="col-last even-row-color"></div>
+<div class="col-summary-item-name odd-row-color"><a href="growthbook/sdk/java/GBFeaturesRepository.html#getEncryptionKey()">growthbook.sdk.java.GBFeaturesRepository.getEncryptionKey()</a></div>
+<div class="col-last odd-row-color"></div>
+</div>
+</div>
+</li>
+</ul>
+<ul class="block-list">
+<li>
+<div id="constructor">
+<div class="caption"><span>Deprecated Constructors</span></div>
+<div class="summary-table two-column-summary">
+<div class="table-header col-first">Constructor</div>
+<div class="table-header col-last">Description</div>
+<div class="col-summary-item-name even-row-color"><a href="growthbook/sdk/java/GBFeaturesRepository.html#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.String,growthbook.sdk.java.FeatureRefreshStrategy,java.lang.Integer)">growthbook.sdk.java.GBFeaturesRepository<wbr>(String, String, String, FeatureRefreshStrategy, Integer)</a></div>
+<div class="col-last even-row-color"></div>
 </div>
 </div>
 </li>
