--- a/serialized-form.html
+++ b/serialized-form.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="script-dir/jquery-3.6.1.min.js"></script>
+<script type="text/javascript" src="script-dir/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="serialized-form-page">
@@ -57,7 +57,7 @@ loadScripts(document, 'script');</script>
 <ul class="block-list">
 <li>
 <section class="serialized-class-details" id="growthbook.sdk.java.DecryptionUtils.DecryptionException">
-<h3>Exception&nbsp;growthbook.sdk.java.DecryptionUtils.DecryptionException</h3>
+<h3>Exception&nbsp;<a href="growthbook/sdk/java/DecryptionUtils.DecryptionException.html" title="class in growthbook.sdk.java">growthbook.sdk.java.DecryptionUtils.DecryptionException</a></h3>
 <div class="type-signature">class DecryptionException extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" title="class or interface in java.lang" class="external-link">Exception</a> implements <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a></div>
 </section>
 </li>
