--- a/growthbook/sdk/java/FeatureResult.html
+++ b/growthbook/sdk/java/FeatureResult.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="../../../script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="../../../jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="../../../script.js"></script>
-<script type="text/javascript" src="../../../script-dir/jquery-3.6.1.min.js"></script>
+<script type="text/javascript" src="../../../script-dir/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="../../../script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="class-declaration-page">
@@ -82,7 +82,7 @@ loadScripts(document, 'script');</script>
 <hr>
 <div class="type-signature"><span class="modifiers">public class </span><span class="element-name type-name-label">FeatureResult&lt;ValueType&gt;</span>
 <span class="extends-implements">extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></span></div>
-<div class="block">Results for a <code>IFeatureEvaluator.evaluateFeature(String, GBContext, Class, JsonObject)</code>
+<div class="block">Results for a <a href="FeatureEvaluator.html#evaluateFeature(java.lang.String,growthbook.sdk.java.multiusermode.configurations.EvaluationContext,java.lang.Class)"><code>FeatureEvaluator.evaluateFeature(String, EvaluationContext, Class)</code></a>
 
  <ul>
  <li>value (any) - The assigned value of the feature</li>
