--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="../../../script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="../../../jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="../../../script.js"></script>
-<script type="text/javascript" src="../../../script-dir/jquery-3.6.1.min.js"></script>
+<script type="text/javascript" src="../../../script-dir/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="../../../script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="package-tree-page">
@@ -59,18 +59,22 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
+<li class="circle">growthbook.sdk.java.<a href="AssignedExperiment.html" class="type-name-link" title="class in growthbook.sdk.java">AssignedExperiment</a></li>
 <li class="circle">growthbook.sdk.java.<a href="BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.<a href="BucketRange.BucketRangeBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange.BucketRangeBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="CachingManager.html" class="type-name-link" title="class in growthbook.sdk.java">CachingManager</a></li>
+<li class="circle">growthbook.sdk.java.<a href="ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java">ConditionEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.<a href="DecryptionUtils.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Experiment.ExperimentBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment.ExperimentBuilder</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="ExperimentHelper.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentHelper</a></li>
+<li class="circle">growthbook.sdk.java.<a href="ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentResult.ExperimentResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult.ExperimentResultBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="FeatureEvalContext.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvalContext</a></li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Filter.FilterBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Filter.FilterBuilder</a></li>
@@ -79,27 +83,27 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
-<li class="circle">growthbook.sdk.java.<a href="GeneratedStickyBucketAssignmentDocModel.html" class="type-name-link" title="class in growthbook.sdk.java">GeneratedStickyBucketAssignmentDocModel</a></li>
 <li class="circle">growthbook.sdk.java.<a href="GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
-<li class="circle">growthbook.sdk.java.<a href="HashAttributeAndHashValue.html" class="type-name-link" title="class in growthbook.sdk.java">HashAttributeAndHashValue</a></li>
+<li class="circle">growthbook.sdk.java.<a href="GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBookJsonUtils</a></li>
+<li class="circle">growthbook.sdk.java.<a href="LocalGbFeatureRepository.html" class="type-name-link" title="class in growthbook.sdk.java">LocalGbFeatureRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
 <li class="circle">growthbook.sdk.java.<a href="Namespace.NamespaceBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace.NamespaceBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="NativeJavaGbFeatureRepository.html" class="type-name-link" title="class in growthbook.sdk.java">NativeJavaGbFeatureRepository</a></li>
+<li class="circle">growthbook.sdk.java.<a href="NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="OptionalField.html" class="type-name-link" title="class in growthbook.sdk.java">OptionalField</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="ParentCondition.html" class="type-name-link" title="class in growthbook.sdk.java">ParentCondition</a></li>
-<li class="circle">growthbook.sdk.java.<a href="StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java">StickyBucketVariation</a></li>
-<li class="circle">growthbook.sdk.java.<a href="StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
+<li class="circle">growthbook.sdk.java.<a href="RequestBodyForRemoteEval.html" class="type-name-link" title="class in growthbook.sdk.java">RequestBodyForRemoteEval</a></li>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Throwable.html" class="type-name-link external-link" title="class or interface in java.lang">Throwable</a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" class="type-name-link external-link" title="class or interface in java.lang">Exception</a>
 <ul>
+<li class="circle">growthbook.sdk.java.<a href="DecryptionUtils.DecryptionException.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils.DecryptionException</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureFetchException.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureFetchException</a></li>
 </ul>
 </li>
 </ul>
 </li>
 <li class="circle">growthbook.sdk.java.<a href="TrackData.html" class="type-name-link" title="class in growthbook.sdk.java">TrackData</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta</a></li>
-<li class="circle">growthbook.sdk.java.<a href="VariationMeta.VariationMetaBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta.VariationMetaBuilder</a></li>
-<li class="circle">growthbook.sdk.java.<a href="Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
 </ul>
