--- a/overview-tree.html
+++ b/overview-tree.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="script-dir/jquery-3.6.1.min.js"></script>
+<script type="text/javascript" src="script-dir/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="tree-page">
@@ -52,6 +52,10 @@ loadScripts(document, 'script');</script>
 <span class="package-hierarchy-label">Package Hierarchies:</span>
 <ul class="horizontal">
 <li><a href="growthbook/sdk/java/package-tree.html">growthbook.sdk.java</a>, </li>
+<li><a href="growthbook/sdk/java/multiusermode/package-tree.html">growthbook.sdk.java.multiusermode</a>, </li>
+<li><a href="growthbook/sdk/java/multiusermode/configurations/package-tree.html">growthbook.sdk.java.multiusermode.configurations</a>, </li>
+<li><a href="growthbook/sdk/java/multiusermode/usage/package-tree.html">growthbook.sdk.java.multiusermode.usage</a>, </li>
+<li><a href="growthbook/sdk/java/multiusermode/util/package-tree.html">growthbook.sdk.java.multiusermode.util</a>, </li>
 <li><a href="growthbook/sdk/java/stickyBucketing/package-tree.html">growthbook.sdk.java.stickyBucketing</a></li>
 </ul>
 </div>
@@ -60,19 +64,27 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/AssignedExperiment.html" class="type-name-link" title="class in growthbook.sdk.java">AssignedExperiment</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.BucketRangeBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">BucketRange.BucketRangeBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/CachingManager.html" class="type-name-link" title="class in growthbook.sdk.java">CachingManager</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java">ConditionEvaluator</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/DecryptionUtils.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">EvaluationContext</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.StackContext.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">EvaluationContext.StackContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.ExperimentBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Experiment.ExperimentBuilder</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentHelper.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentHelper</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.ExperimentResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult.ExperimentResultBuilder</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.multiusermode.<a href="growthbook/sdk/java/multiusermode/ExperimentTracker.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode">ExperimentTracker</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureEvalContext.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvalContext</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackAdapter.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackAdapter</a> (implements growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackWithUser.html" title="interface in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackWithUser</a>)</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.FilterBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Filter.FilterBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
@@ -80,29 +92,38 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepositoryRequestInterceptor.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepositoryRequestInterceptor</a> (implements okhttp3.Interceptor)</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GeneratedStickyBucketAssignmentDocModel.html" class="type-name-link" title="class in growthbook.sdk.java">GeneratedStickyBucketAssignmentDocModel</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.GlobalContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext.GlobalContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/HashAttributeAndHashValue.html" class="type-name-link" title="class in growthbook.sdk.java">HashAttributeAndHashValue</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.<a href="growthbook/sdk/java/multiusermode/GrowthBookClient.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode">GrowthBookClient</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBookJsonUtils.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBookJsonUtils</a></li>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/InMemoryStickyBucketServiceImpl.html" class="type-name-link" title="class in growthbook.sdk.java.stickyBucketing">InMemoryStickyBucketServiceImpl</a> (implements growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a>)</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/LocalGbFeatureRepository.html" class="type-name-link" title="class in growthbook.sdk.java">LocalGbFeatureRepository</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.NamespaceBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace.NamespaceBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/NativeJavaGbFeatureRepository.html" class="type-name-link" title="class in growthbook.sdk.java">NativeJavaGbFeatureRepository</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/OptionalField.html" class="type-name-link" title="class in growthbook.sdk.java">OptionalField</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.OptionsBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">Options.OptionsBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ParentCondition.html" class="type-name-link" title="class in growthbook.sdk.java">ParentCondition</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/RequestBodyForRemoteEval.html" class="type-name-link" title="class in growthbook.sdk.java">RequestBodyForRemoteEval</a></li>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.stickyBucketing">StickyAssignmentsDocument</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java">StickyBucketVariation</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a></li>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Throwable.html" class="type-name-link external-link" title="class or interface in java.lang">Throwable</a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" class="type-name-link external-link" title="class or interface in java.lang">Exception</a>
 <ul>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/DecryptionUtils.DecryptionException.html" class="type-name-link" title="class in growthbook.sdk.java">DecryptionUtils.DecryptionException</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureFetchException.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureFetchException</a></li>
 </ul>
 </li>
 </ul>
 </li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackData.html" class="type-name-link" title="class in growthbook.sdk.java">TrackData</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/VariationMeta.VariationMetaBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta.VariationMetaBuilder</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/TrackingCallbackAdapter.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.usage">TrackingCallbackAdapter</a> (implements growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/TrackingCallbackWithUser.html" title="interface in growthbook.sdk.java.multiusermode.usage">TrackingCallbackWithUser</a>)</li>
+<li class="circle">growthbook.sdk.java.multiusermode.util.<a href="growthbook/sdk/java/multiusermode/util/TransformationUtil.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.util">TransformationUtil</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext.UserContextBuilder</a></li>
 </ul>
 </li>
 </ul>
@@ -113,8 +134,10 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">ExperimentRunCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRefreshCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureRefreshCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureUsageCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureUsageCallback</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackWithUser.html" class="type-name-link" title="interface in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackWithUser</a></li>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" class="type-name-link" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">TrackingCallback</a></li>
+<li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/TrackingCallbackWithUser.html" class="type-name-link" title="interface in growthbook.sdk.java.multiusermode.usage">TrackingCallbackWithUser</a></li>
 </ul>
 </section>
 <section class="hierarchy">
