--- a/growthbook/sdk/java/model/package-tree.html
+++ b/growthbook/sdk/java/model/package-tree.html
@@ -69,7 +69,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="Feature.html" class="type-name-link" title="class in growthbook.sdk.java.model">Feature</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.model.<a href="FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.model.<a href="FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.model.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
 <li class="circle">growthbook.sdk.java.model.<a href="FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.model.<a href="Filter.html" class="type-name-link" title="class in growthbook.sdk.java.model">Filter</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="Filter.FilterBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">Filter.FilterBuilder</a></li>
@@ -84,6 +83,11 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="RequestBodyForRemoteEval.html" class="type-name-link" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyAssignmentsDocument</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyBucketVariation</a></li>
+<li class="circle">serializers.<a href="../../../../serializers/SuperTypeToken.html" class="type-name-link" title="class in serializers">SuperTypeToken</a>&lt;T&gt;
+<ul>
+<li class="circle">growthbook.sdk.java.model.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
+</ul>
+</li>
 <li class="circle">growthbook.sdk.java.model.<a href="TrackData.html" class="type-name-link" title="class in growthbook.sdk.java.model">TrackData</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.model.<a href="VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java.model">VariationMeta</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="VariationMeta.VariationMetaBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">VariationMeta.VariationMetaBuilder</a></li>
