--- a/index-all.html
+++ b/index-all.html
@@ -171,8 +171,6 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.html" title="class in growthbook.sdk.java.repository">NativeJavaGbFeatureRepository</a></dt>
@@ -364,8 +362,6 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html#equals(java.lang.Object)" class="member-name-link">equals(Object)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#equals(java.lang.Object)" class="member-name-link">equals(Object)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
-<dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#equals(java.lang.Object)" class="member-name-link">equals(Object)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/GrowthBook.html#evalFeature(java.lang.String,java.lang.Class)" class="member-name-link">evalFeature(String, Class&lt;ValueType&gt;)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" title="class in growthbook.sdk.java">GrowthBook</a></dt>
 <dd>
@@ -1439,6 +1435,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Array of tracking calls to fire</div>
 </dd>
+<dt><a href="serializers/SuperTypeToken.html#getType()" class="member-name-link">getType()</a> - Method in class serializers.<a href="serializers/SuperTypeToken.html" title="class in serializers">SuperTypeToken</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/GBContext.html#getUrl()" class="member-name-link">getUrl()</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
 <dd>
 <div class="block">The URL of the current page</div>
@@ -1632,8 +1630,6 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html#hashCode()" class="member-name-link">hashCode()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#hashCode()" class="member-name-link">hashCode()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
-<dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#hashCode()" class="member-name-link">hashCode()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/ExperimentResult.ExperimentResultBuilder.html#hashUsed(java.lang.Boolean)" class="member-name-link">hashUsed(Boolean)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/ExperimentResult.ExperimentResultBuilder.html" title="class in growthbook.sdk.java.model">ExperimentResult.ExperimentResultBuilder</a></dt>
 <dd>&nbsp;</dd>
@@ -2163,6 +2159,8 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="growthbook/sdk/java/model/Filter.FilterBuilder.html#seed(java.lang.String)" class="member-name-link">seed(String)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Filter.FilterBuilder.html" title="class in growthbook.sdk.java.model">Filter.FilterBuilder</a></dt>
 <dd>&nbsp;</dd>
+<dt><a href="serializers/package-summary.html">serializers</a> - package serializers</dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/FeatureRefreshStrategy.html#SERVER_SENT_EVENTS" class="member-name-link">SERVER_SENT_EVENTS</a> - Enum constant in enum class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/FeatureRefreshStrategy.html" title="enum class in growthbook.sdk.java.repository">FeatureRefreshStrategy</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/GBContext.html#setAllowUrlOverride(java.lang.Boolean)" class="member-name-link">setAllowUrlOverride(Boolean)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" title="class in growthbook.sdk.java.model">GBContext</a></dt>
@@ -2191,8 +2189,6 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="growthbook/sdk/java/model/RequestBodyForRemoteEval.html#setAttributes(com.google.gson.JsonObject)" class="member-name-link">setAttributes(JsonObject)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/RequestBodyForRemoteEval.html" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#setAttributes(com.google.gson.JsonObject)" class="member-name-link">setAttributes(JsonObject)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/GrowthBook.html#setAttributes(java.lang.String)" class="member-name-link">setAttributes(String)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" title="class in growthbook.sdk.java">GrowthBook</a></dt>
 <dd>
 <div class="block">Update the user's attributes</div>
@@ -2205,8 +2201,6 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">String format of user attributes that are used to assign variations</div>
 </dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#setAttributesJson(java.lang.String)" class="member-name-link">setAttributesJson(String)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/StickyAssignmentsDocument.html#setAttributeValue(java.lang.String)" class="member-name-link">setAttributeValue(String)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/StickyAssignmentsDocument.html" title="class in growthbook.sdk.java.model">StickyAssignmentsDocument</a></dt>
 <dd>
 <div class="block">The value of the attribute (e.g.</div>
@@ -2357,8 +2351,6 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html#setForcedFeatureValues(java.util.Map)" class="member-name-link">setForcedFeatureValues(Map&lt;String, Object&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#setForcedFeatureValues(java.util.Map)" class="member-name-link">setForcedFeatureValues(Map&lt;String, Object&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/RequestBodyForRemoteEval.html#setForcedVariations(java.util.Map)" class="member-name-link">setForcedVariations(Map&lt;String, Integer&gt;)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/RequestBodyForRemoteEval.html" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html#setForcedVariations(java.util.Map)" class="member-name-link">setForcedVariations(Map&lt;String, Integer&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext</a></dt>
@@ -2367,8 +2359,6 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Force specific experiments to always assign a specific variation (used for QA)</div>
 </dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#setForcedVariationsMap(java.util.Map)" class="member-name-link">setForcedVariationsMap(Map&lt;String, Integer&gt;)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/ParentCondition.html#setGate(java.lang.Boolean)" class="member-name-link">setGate(Boolean)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/ParentCondition.html" title="class in growthbook.sdk.java.model">ParentCondition</a></dt>
 <dd>
 <div class="block">If gate is true, then this is a blocking feature-level prerequisite;
@@ -2671,8 +2661,6 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#setUrl(java.lang.String)" class="member-name-link">setUrl(String)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#setUrl(java.lang.String)" class="member-name-link">setUrl(String)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.html#setUser(growthbook.sdk.java.multiusermode.configurations.UserContext)" class="member-name-link">setUser(UserContext)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">EvaluationContext</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/FeatureResult.html#setValue(java.lang.Object)" class="member-name-link">setValue(Object)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureResult.html" title="class in growthbook.sdk.java.model">FeatureResult</a></dt>
@@ -2788,6 +2776,10 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Add up all the numbers</div>
 </dd>
+<dt><a href="serializers/SuperTypeToken.html" class="type-name-link" title="class in serializers">SuperTypeToken</a>&lt;<a href="serializers/SuperTypeToken.html" title="type parameter in SuperTypeToken">T</a>&gt; - Class in <a href="serializers/package-summary.html">serializers</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="serializers/SuperTypeToken.html#%3Cinit%3E()" class="member-name-link">SuperTypeToken()</a> - Constructor for class serializers.<a href="serializers/SuperTypeToken.html" title="class in serializers">SuperTypeToken</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html#swrTtlSeconds(java.lang.Integer)" class="member-name-link">swrTtlSeconds(Integer)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder.html#swrTtlSeconds(java.lang.Integer)" class="member-name-link">swrTtlSeconds(Integer)</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder.html" title="class in growthbook.sdk.java.repository">NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder</a></dt>
@@ -2892,10 +2884,6 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
-<dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext.UserContextBuilder</a></dt>
-<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.GBFeaturesRepositoryBuilder.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository.GBFeaturesRepositoryBuilder</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder.html" title="class in growthbook.sdk.java.repository">NativeJavaGbFeatureRepository.NativeJavaGbFeatureRepositoryBuilder</a></dt>
@@ -2982,6 +2970,8 @@ loadScripts(document, 'script');</script>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a> - Class in <a href="growthbook/sdk/java/multiusermode/configurations/package-summary.html">growthbook.sdk.java.multiusermode.configurations</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext.UserContextBuilder</a> - Class in <a href="growthbook/sdk/java/multiusermode/configurations/package-summary.html">growthbook.sdk.java.multiusermode.configurations</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html#%3Cinit%3E()" class="member-name-link">UserContextBuilder()</a> - Constructor for class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext.UserContextBuilder</a></dt>
 <dd>&nbsp;</dd>
 </dl>
 <h2 class="title" id="I:V">V</h2>
@@ -3132,6 +3122,8 @@ the order they are declared.</div>
 <dd>
 <div class="block">How to weight traffic between variations.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#witAttributesJson(java.lang.String)" class="member-name-link">witAttributesJson(String)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
+<dd>&nbsp;</dd>
 </dl>
 <h2 class="title" id="I:X">X</h2>
 <dl class="index">
