--- a/overview-tree.html
+++ b/overview-tree.html
@@ -63,7 +63,8 @@ loadScripts(document, 'script');</script>
 <li><a href="growthbook/sdk/java/repository/package-tree.html">growthbook.sdk.java.repository</a>, </li>
 <li><a href="growthbook/sdk/java/sandbox/package-tree.html">growthbook.sdk.java.sandbox</a>, </li>
 <li><a href="growthbook/sdk/java/stickyBucketing/package-tree.html">growthbook.sdk.java.stickyBucketing</a>, </li>
-<li><a href="growthbook/sdk/java/util/package-tree.html">growthbook.sdk.java.util</a></li>
+<li><a href="growthbook/sdk/java/util/package-tree.html">growthbook.sdk.java.util</a>, </li>
+<li><a href="serializers/package-tree.html">serializers</a></li>
 </ul>
 </div>
 <section class="hierarchy">
@@ -90,7 +91,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.evaluators.<a href="growthbook/sdk/java/evaluators/FeatureEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.evaluators">FeatureEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
-<li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackAdapter.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackAdapter</a> (implements growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackWithUser.html" title="interface in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackWithUser</a>)</li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Filter.html" class="type-name-link" title="class in growthbook.sdk.java.model">Filter</a></li>
@@ -123,6 +123,11 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyAssignmentsDocument</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyBucketVariation</a></li>
 <li class="circle">growthbook.sdk.java.util.<a href="growthbook/sdk/java/util/StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java.util">StringUtils</a></li>
+<li class="circle">serializers.<a href="serializers/SuperTypeToken.html" class="type-name-link" title="class in serializers">SuperTypeToken</a>&lt;T&gt;
+<ul>
+<li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
+</ul>
+</li>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Throwable.html" class="type-name-link external-link" title="class or interface in java.lang">Throwable</a> (implements java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" class="type-name-link external-link" title="class or interface in java.lang">Exception</a>
